--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -52,9 +52,9 @@
     <footer>
         <h2>Fale Conosco</h2>
         <nav>
-            <a href="#"><img src="./img/social-1.png" alt="Social 1" ></a>
+            <a href="#"><img src="./img/social-1.png" alt="Social 1" >Item-1</a>
             <a href="#"><img src="./img/social-2.png" alt="Social 2" > Item-2</a>
-            <a href="#"><img src="./img/social-3.png" alt="Spcial 3" > Item-2</a>
+            <a href="#"><img src="./img/social-3.png" alt="Spcial 3" > Item-3</a>
         </nav>
     </footer>
     
