Iniciando com Form e input.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,28 @@
             <a href="#"><img src="./img/social-2.png" alt="Social 2" > Item-2</a>
             <a href="#"><img src="./img/social-3.png" alt="Spcial 3" > Item-3</a>
         </nav>
+
+        <div>
+            <form action="index.html" method= onsubmit="return false">
+                <fieldset>
+                    <legend>Contato</legend>
+                    <div>
+                        <label for="idEmail">Email</label>
+                        <input type="email" name="txtEmail" id="idEmail" placeholder="Email">
+                        <!-- value="Email" -->
+                    </div>
+                    <div>
+                        <label for="idNome">Email</label>
+                        <input type="text" name="txtNm" id="idNome" placeholder="Nome">
+                        <!-- value="Email" -->
+                    </div>
+                    <div>
+                        <input type="submit" value="Enviar">
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+
     </footer>
     
 </body>
