--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer class="rodape">
         <h2>Fale Conosco</h2>
         <nav>
             <a href="#"><img src="./img/social-1.png" alt="Logo github"></a>
