--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
     </section>
 
-    <footer class="rodape">
+    <footer>
         <h2>Fale Conosco</h2>
         <nav>
             <a href="#"><img src="./img/social-1.png" alt="Logo github"></a>
@@ -130,7 +130,7 @@
         </div>
 
     </footer>
-
+    
 </body>
 
 </html>
