--- a/login.html
+++ b/login.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+    <div id="msgStatus"></div>
+
     <div>
         <form action="index.html" method="GET" onsubmit="return false">
             <fieldset>
