--- a/home.html
+++ b/home.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./js/home.js" defer> </script>
     <title>HOME</title>
 </head>
 <body>
 
     <h1>Login Efetuado com sucesso</h1>
+    <div id="welcome"></div>
+    <button id="btnSair">LOGOUT</button>
     
 </body>
 </html>
